# ha-eltariff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: copilot-setup-steps.yml  hacs.yml  python-app.yaml  release.yml
custom_components/eltariff/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  coordinator_data.py  diagnostics.py  energy_tracker.py  manifest.json  power_tracker.py  price_curve_helpers.py  sensor.py  services.yaml  strings.json
custom_components/eltariff/api/: __init__.py  client.py  errors.py  models.py  schedule.py
custom_components/eltariff/api/models/: __init__.py  active_period.py  calendar_pattern.py  calendar_pattern_references.py  price.py  (+15 more)
custom_components/eltariff/billing/: __init__.py  cost_service.py  iso_duration.py  models.py  peak_tracker.py
custom_components/eltariff/sensor/: __init__.py  active_power_band.py  active_power_price.py  base.py  charged_peak.py  cost_sensor_base.py  energy_price_total.py  energy_tax.py  energy_transfer.py  fixed_price_annual.py  next_transition.py  observed_peak.py  peak_cost.py  peaks_used_for_average.py  price_curve.py  price_curve_cost.py  running_cost.py  tax_cost.py  transmission_cost.py
custom_components/eltariff/translations/: en.json  sv.json
samples/: goteborg_tariffs.json
scripts/: dump_tariff.py
tests/: test_billing.py  test_billing_advanced.py  test_billing_time_of_use_peaks.py  test_iso_duration.py  test_models.py  test_models_unit.py  test_price_curves.py  test_schedule.py  test_schedule_advanced.py
