[project]
name = "ha-eltariff"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
